[package]
name = "ult_logger"
version = "0.1.0"
authors = []
edition = "2021"

[package.metadata.skyline]
titleid = "01006A800016E000" # Smash Ultimate

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = "0.2.1"
skyline_smash = { git = "https://github.com/ultimate-research/skyline-smash.git" }
# smash = { git = "https://github.com/blu-dev/smash-rs.git" }
acmd = { git = "https://github.com/ultimate-research/skyline-acmd.git" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.3.0"
ninput = { git = "https://github.com/blu-dev/ninput.git" }
rand = "0.8.5"

[patch.crates-io]
native-tls = { git = "https://github.com/skyline-rs/rust-native-tls", branch = "switch-timeout-panic" }
nnsdk = { git = "https://github.com/ultimate-research/nnsdk-rs" }
rand = { git = "https://github.com/skyline-rs/rand" }
getrandom = { git = "https://github.com/Raytwo/getrandom" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true


